--- a/app/src/main/res/layout-v26/list_item_live.xml
+++ b/app/src/main/res/layout-v26/list_item_live.xml
@@ -30,14 +30,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_stream_vorschau"
             tools:text="Streamername" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +46,7 @@
                 android:id="@+id/tv_charname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="11sp"
+                android:textSize="11dp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,35 +54,28 @@
                 app:layout_constraintVertical_bias="0.5"
                 tools:text="Charname" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            app:layout_constraintEnd_toEndOf="@+id/iv_stream_vorschau"
-            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
-            app:layout_constraintTop_toBottomOf="@+id/tv_streamername">
-
-            <TextView
-                android:id="@+id/tv_fraktion"
-                android:layout_width="55dp"
-                android:layout_height="18dp"
-                android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
-                android:textColor="@color/luckyv_white"
-                android:textSize="11sp"
-                android:textStyle="normal"
+            <Button
+                android:id="@+id/chip_fraktion"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginStart="5dp"
+                android:textSize="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_charname"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5"
-                tools:text="Fraktion" />
-
+                app:layout_constraintVertical_bias="0.0"
+                android:backgroundTint="#A8A6A0"
+                tools:text="Fraktion"
+                android:textStyle="normal"
+                android:textColor="@color/luckyv_white"
+                android:autoSizeMinTextSize="11dp"
+                android:autoSizeMaxTextSize="15dp"/>
+            
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
