--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_app_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="74dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,7 +27,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/app_name"
-                android:textColor="@color/black"
+                android:textColor="@color/luckyv_white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -43,6 +43,7 @@
                 android:layout_width="72dp"
                 android:layout_height="64dp"
                 android:layout_marginTop="5dp"
+                android:alpha="0"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -59,20 +60,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_app_header">
-
-<!--                        <androidx.fragment.app.FragmentContainerView-->
-<!--                            android:id="@+id/activity_main"-->
-<!--                            android:name="androidx.navigation.fragment.NavHostFragment"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginTop="115dp"-->
-<!--                            app:defaultNavHost="true"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintHorizontal_bias="0.5"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            app:navGraph="@navigation/nav_graph"-->
-<!--                            tools:context=".ui.HomeFragment"/>-->
 
             <fragment
                 android:id="@+id/nav_host_fragment"
