--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/app_name"
-                android:textColor="@color/black"
+                android:textColor="@color/txt_luckyv_black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:visibility="invisible"
@@ -80,11 +80,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_navBar"
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="70dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            android:background="@color/btn_luckyv_yellow"
             app:layout_constraintTop_toBottomOf="@+id/cl_home_fragment"
             app:layout_constraintVertical_bias="1.0">
 
@@ -111,9 +112,9 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="13dp"
                 android:layout_marginBottom="13dp"
-                android:src="@drawable/luckyv_logo"
-                android:textColor="@color/luckyv_white"
-                android:backgroundTint="@color/luckyv_yellow"
+                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:src="@drawable/baseline_home_white_20"
+                android:textColor="@color/btn_luckyv_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -124,8 +125,9 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="13dp"
                 android:layout_marginBottom="13dp"
-                android:textColor="@color/luckyv_white"
-                android:backgroundTint="@color/luckyv_yellow"
+                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:src="@drawable/baseline_favorite_white_20"
+                android:textColor="@color/btn_luckyv_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -139,8 +141,9 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="13dp"
-                android:textColor="@color/luckyv_white"
-                android:backgroundTint="@color/luckyv_yellow"
+                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:src="@drawable/baseline_settings_white_20"
+                android:textColor="@color/btn_luckyv_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
