--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,11 +4,11 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/app_background_dark</item>
         <item name="colorPrimaryVariant">@color/luckyv_yellow</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/luckyv_black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondary">@color/luckyv_black</item>
 <!--        <item name="colorSecondaryVariant">@color/teal_200</item>-->
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/luckyv_black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
