--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,9 @@
         <item name="colorPrimaryVariant">@color/luckyv_yellow</item>
         <item name="colorOnPrimary">@color/luckyv_white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondary">@color/luckyv_black</item>
 <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/luckyv_black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
