--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,8 +26,8 @@
             android:id="@+id/action_homeFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_streamFragment2"
-            app:destination="@id/streamFragment2" />
+            android:id="@+id/action_homeFragment_to_streamFragment"
+            app:destination="@id/streamFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
@@ -54,7 +54,7 @@
             app:destination="@id/favoritesFragment" />
     </fragment>
     <fragment
-        android:id="@+id/streamFragment2"
+        android:id="@+id/streamFragment"
         android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.ui.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" >
