--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,20 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/favoritesFragment">
+    app:startDestination="@id/startFragment">
 
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.Others.ui.StartFragment"
+        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" >
         <action
             android:id="@+id/action_startFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_favoritesFragment"
+            app:destination="@id/favoritesFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.Others.ui.HomeFragment"
+        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -31,7 +37,7 @@
     </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
-        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.Others.ui.FavoritesFragment"
+        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.FavoritesFragment"
         android:label="fragment_favorites"
         tools:layout="@layout/fragment_favorites" >
         <action
@@ -43,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.Others.ui.SettingsFragment"
+        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" >
         <action
@@ -55,7 +61,7 @@
     </fragment>
     <fragment
         android:id="@+id/streamFragment"
-        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.Others.ui.StreamFragment"
+        android:name="com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" >
         <action
