--- a/app/src/main/res/layout/list_item_offline.xml
+++ b/app/src/main/res/layout/list_item_offline.xml
@@ -101,17 +101,16 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <ImageButton
             android:id="@+id/btn_favorites"
             android:layout_width="20sp"
             android:layout_height="20sp"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginStart="100dp"
+            android:background="@drawable/baseline_favorite_black_20"
             android:clickable="true"
             android:text="Favorisieren"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
